Adding Label CRUD
